fix: hide body overflow to prevent spurious scrollbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,6 +51,8 @@
 
 html,
 body {
+  height: 100%;
+  overflow: hidden;
   background: var(--bg);
   color: var(--text);
   font-family: var(--font-body);
